# Project-II

./: .env.example  .gitignore  README.md  e_auth.html  main.py  manage.py  pyproject.toml  requirements.txt
apps/: __init__.py
apps/accounts/: __init__.py  admin.py  apps.py  models.py  serializers.py  urls.py  views.py
apps/admin_panel/: __init__.py  admin.py  apps.py  models.py  serializers.py  urls.py  views.py
apps/chatbot/: __init__.py  admin.py  apps.py  services.py  urls.py  views.py
apps/core/: __init__.py  admin.py  apps.py  signals.py
apps/cvgen/: admin.py  apps.py  forms.py  models.py  urls.py  views.py
apps/fastapi_microservice/: __init__.py  main.py
apps/jobs/: __init__.py  admin.py  apps.py  models.py  serializers.py  services.py  urls.py  views.py
apps/notifications/: __init__.py  admin.py  apps.py  consumers.py  models.py  serializers.py  services.py  signals.py  urls.py  views.py
apps/quiz/: __init__.py  admin.py  apps.py  cache.py  urls.py  utils.py  views.py
apps/recruiters/: __init__.py  admin.py  apps.py  models.py  serializers.py  urls.py  views.py
apps/shared/: __init__.py  admin.py  apps.py  constants.py  embedding_client.py  (+6 more)
config/: __init__.py  asgi.py  settings.py  urls.py  wsgi.py
data/: learning_resources.json  mock_jobs.json  quiz_questions.json
src/: __init__.py  helper.py  job_api.py
templates/: base.html  base_auth.html  base_dashboard.html  base_public.html  chat.html  jobs.html  linkedin.html  notifications.html  quiz.html  recommendations.html  skillgap.html
vector_store/: fallback_vectors.npy  id_map.pkl
(+60 files in other folders)
