[project]
name = "skillsync-ai"
version = "0.1.0"
description = "AI-powered recruitment platform with Django, FastAPI, Sentence-BERT, and FAISS."
requires-python = ">=3.11,<3.12"
dependencies = [
  "django==4.2",
  "djangorestframework==3.14.0",
  "djangorestframework-simplejwt==5.3.0",
  "django-cors-headers==4.3.0",
  "python-dotenv==1.0.0",
  "PyMuPDF==1.23.8",
  "reportlab==4.0.4",
  "python-docx==1.1.0",
  "sentence-transformers==2.2.2",
  "faiss-cpu==1.7.4",
  "scikit-learn==1.3.0",
  "numpy==1.24.3",
  "pandas==2.0.3",
  "fastapi==0.104.1",
  "uvicorn==0.24.0",
  "python-multipart==0.0.6",
  "streamlit==1.29.0",
  "google-generativeai==0.3.2",
  "apify-client==1.5.0",
  "requests==2.31.0",
  "cloudinary==1.36.0",
  "pypdf2>=3.0.1",
  "drf-spectacular>=0.29.0",
  "pypdf>=6.14.2",
]

[tool.uv]
package = false
